--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ body {
 .more_inf {
   font-family: fantasy, cursive;
 }
-
-@media (max-width:768px) {
-  .header { text-align: center;
+@media (max-width: 768px) {
+  .header { 
+    text-align: center;
+  }
 }
-}
-.centered-main-page-element {
+.main-content {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -29,20 +29,22 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
 }
 ul {
-  margin:0;
+  margin: 0;
   padding: 0px;
 }
-li, h3 {
-  list-style:none;
+li,
+h3 {
+  list-style: none;
 }
-input,button{
-  outline:none;
+input,
+button {
+  outline: none;
 }
 button {
   background: none;
@@ -114,8 +116,8 @@ li > label {
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
-  width: 226px
+li > input[type="text"] {
+  width: 226px;
 }
 .delete img {
   height: 2em;
@@ -128,20 +130,20 @@ li >    input[type="text"] {
 
 /* Completed */
 #completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 ul li input[type=text] {
-  display:none
+  display: none;
 }
 
 .edit-mode input[type=text] {
-  display:inline-block;
-  width:224px
+  display: inline-block;
+  width: 224px;
 }
 
 .edit-mode label {
-  display:none;
+  display: none;
 }
